force-app/main/default/objects/Contact/fields/First_Volunteer_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Volunteer_Date__c</fullName>
    <inlineHelpText>The date of the first Volunteer Hours record for this Contact with a status of Completed (read only).</inlineHelpText>
    <label>First Volunteer Date</label>
    <summarizedField>Volunteer_Hours__c.Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Volunteer_Hours__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Volunteer_Hours__c.Contact__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>