force-app/main/default/objects/Contact/fields/Last_Volunteer_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Volunteer_Date__c</fullName>
    <inlineHelpText>The date of the most recent Volunteer Hours record for this Contact with a status of Completed (read only).</inlineHelpText>
    <label>Last Volunteer Date</label>
    <summarizedField>Volunteer_Hours__c.End_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Volunteer_Hours__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Volunteer_Hours__c.Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>