force-app/main/default/objects/Contact/fields/Volunteer_Auto_Reminder_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Auto_Reminder_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, this Contact will not receive automatic reminder emails about their upcoming Volunteer Shifts.</inlineHelpText>
    <label>Volunteer Auto-Reminder Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>