force-app/main/default/objects/Contact/fields/Volunteer_Availability__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Availability__c</fullName>
    <label>Volunteer Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Availability</valueSetName>
    </valueSet>
</CustomField>