force-app/main/default/objects/Contact/fields/Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours__c</fullName>
    <inlineHelpText>Total number of Volunteer Hours with a Status of Completed. Hours with other status values aren&apos;t included.</inlineHelpText>
    <label>Volunteer Hours</label>
    <summarizedField>Volunteer_Hours__c.Hours_Worked__c</summarizedField>
    <summaryFilterItems>
        <field>Volunteer_Hours__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Volunteer_Hours__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>