force-app/main/default/objects/Contact/fields/Volunteer_Last_Web_Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Last_Web_Signup_Date__c</fullName>
    <inlineHelpText>The date of this Contact&apos;s most recent online volunteer signup. This field is automatically populated from the web signup form. Used to trigger workflow for notification and thank you emails.</inlineHelpText>
    <label>Volunteer Last Web Signup Date</label>
    <type>Date</type>
</CustomField>