force-app/main/default/objects/Contact/fields/Volunteer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Notes__c</fullName>
    <inlineHelpText>Notes from the volunteer. If the volunteer included comments in the web signup form, those comments will be appended here.</inlineHelpText>
    <label>Volunteer Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>