force-app/main/default/objects/Contact/fields/Volunteer_Skills__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Skills__c</fullName>
    <inlineHelpText>Indicates which skills this Contact has. You can filter on skills when you look for volunteers for particular Jobs.</inlineHelpText>
    <label>Volunteer Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Skills</valueSetName>
    </valueSet>
</CustomField>